--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^/]*)$ /index.php?page=$1 [L,R=301]
+RewriteRule ^([^/]*)$ /index.php?page=$1 [L]
 
 # Redirect to HTTPS (always)
 #RewriteCond %{HTTPS} off
